Min-width for text fields adde.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -124,6 +124,7 @@ div.filter p:last-child {
                             border-radius: 4px;
                             padding: 3px;
                             background: #ffffff;
+                            min-width: 250px;
                         }
 
                         input[type="radio"] {
